--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,2 +1,3 @@
 # .streamlit/secrets.toml
 GEMINI_API_KEY = "AIzaSyBr1urJ1Nwlj2PdN6PF904Kcn0QXZ2ETZg"
+#USE YOUR OWN KEY MY KEY IS FREE VERSION THOUGH
