--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,3 +1,3 @@
 # .streamlit/secrets.toml
-GEMINI_API_KEY = "AIzaSyBr1urJ1Nwlj2PdN6PF904Kcn0QXZ2ETZg"
+GEMINI_API_KEY = "enter here"
 #USE YOUR OWN KEY MY KEY IS FREE VERSION THOUGH AND I KNOW AM SUPPOSED TO REMOVE IT
