--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,3 +1,3 @@
 # .streamlit/secrets.toml
-GEMINI_API_KEY = "AIzaSyDd-0ZDfoxog53rXzK_WpZfPmCyATGf7vM"
+GEMINI_API_KEY = ""
 #USE YOUR OWN KEY MY KEY IS FREE VERSION THOUGH AND I KNOW AM SUPPOSED TO REMOVE IT
