--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,3 +1,3 @@
 # .streamlit/secrets.toml
-GEMINI_API_KEY = ""
+GEMINI_API_KEY = "AIzaSyAeIYQdEpSwEOQ7KnVoP0U7vvv-lB5Re4Y"
 #USE YOUR OWN KEY MY KEY IS FREE VERSION THOUGH AND I KNOW AM SUPPOSED TO REMOVE IT
